# zihuan-next

./: .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  build.rs  config.yaml.example  example.json  main.py  pyproject.toml  qq_agent_example.json
crates/zihuan_bot_adapter/: Cargo.toml
crates/zihuan_bot_adapter/src/: adapter.rs  bot_adapter.rs  extract_group_id_from_event.rs  extract_message_from_event.rs  extract_sender_id_from_event.rs  lib.rs  message_event_type_filter.rs  message_helpers.rs  message_sender.rs  send_friend_message.rs  send_friend_message_batches.rs  send_group_message.rs  send_group_message_batches.rs  send_qq_message_batches.rs  ws_action.rs
ims_bot_adapter/: Cargo.toml
ims_bot_adapter/src/: active_adapter_manager.rs  adapter.rs  event.rs  extract_group_id_from_event.rs  extract_media_by_id.rs  extract_message_by_id_from_event.rs  extract_message_from_event.rs  extract_optional_group_id_from_event.rs  extract_qq_message_list_from_event.rs  extract_sender_from_event.rs  extract_sender_id_from_event.rs  ims_bot_adapter_provider.rs  lib.rs  login_info.rs  message_event_type_filter.rs  message_helpers.rs  message_sender.rs  multimodal_image_url.rs  profile.rs  send_friend_message.rs  send_friend_message_batches.rs  send_group_message.rs  send_group_message_batches.rs  send_message.rs  send_qq_message_batches.rs  system_config.rs  ws_action.rs
ims_bot_adapter/src/models/: event_model.rs  message.rs  profile.rs  sender_model.rs
ims_bot_adapter/src/tools/: group_members.rs  mod.rs  qq_profile.rs
ims_bot_adapter/src/utils/: mod.rs
ims_bot_adapter/tests/: message_id_multimodal_extraction.rs  reply_source_fallback.rs
storage_handler/: Cargo.toml
storage_handler/src/: agent_avatar_rdb_store.rs  agent_avatar_store.rs  agent_image_db_ref.rs  agent_memory_weaviate.rs  agent_mysql_ref.rs  agent_rustfs_ref.rs  connection_manager.rs  db_schema.rs  elasticsearch.rs  image_weaviate_persistence.rs  lib.rs  message_record.rs  message_store.rs  mysql.rs  qq_message_list_weaviate_persistence.rs  rdb.rs  redis.rs  resource_resolver.rs  rustfs.rs  sqlite.rs  tavily_provider_node.rs  tavily_search_node.rs  weaviate.rs  weaviate_client.rs  weaviate_image_collection.rs  weaviate_image_search_node.rs  weaviate_persistence.rs  weaviate_schema.rs
storage_handler/src/object_storage/: client.rs  media_cache.rs  mod.rs
zihuan_core/: Cargo.toml
zihuan_core/src/: agent_config.rs  config.rs  connection_manager.rs  data_refs.rs  error.rs  lib.rs  message_part.rs  python_runtime.rs  runtime.rs  setup_wizard.rs  system_config.rs  task_context.rs  tool_runtime.rs  url_utils.rs  weaviate.rs  worker_pool.rs  workspace.rs
zihuan_core/src/agent_config/: mod.rs  qq_chat.rs
zihuan_core/src/command/: mod.rs  parser.rs
zihuan_core/src/database/: mod.rs
zihuan_core/src/ims_bot_adapter/: logging.rs  mod.rs  natural_language_reply.rs
zihuan_core/src/llm/: embedding_base.rs  llm_base.rs  mod.rs  tooling.rs
zihuan_core/src/rag/: brave.rs  mod.rs  tavily.rs  web_search_engine.rs
zihuan_core/src/steer/: mod.rs
zihuan_core/src/utils/: bm25.rs  hash_string.rs  string_utils.rs
zihuan_core_nodes/: Cargo.toml
zihuan_core_nodes/src/: lib.rs
zihuan_core_nodes/src/agent/: agent_embedding_model.rs  agent_llm.rs  agent_tavily_ref.rs  mod.rs
zihuan_core_nodes/src/brain/: brain_node.rs  brain_tool.rs  mod.rs  tool_subgraph.rs
zihuan_core_nodes/src/linalg/: batch_text_embedding.rs  embedding_api.rs  mod.rs
zihuan_core_nodes/src/llm/: context_compact_node.rs  llm_node.rs  mod.rs
zihuan_core_nodes/src/nn/: local_candle_embedding_node.rs  mod.rs
zihuan_core_nodes/src/rag/: mod.rs  tavily_provider.rs  weaviate_image_search.rs
zihuan_graph_cli/: Cargo.toml
zihuan_graph_cli/src/: main.rs
zihuan_graph_engine/: Cargo.toml
zihuan_graph_engine/src/: brain_tool_spec.rs  data_value.rs  function_graph.rs  graph_boundary.rs  graph_io.rs  hyperparam_store.rs  image_weaviate_persistence.rs  lib.rs  message_mysql_chunking.rs  message_mysql_get_group_history.rs  message_mysql_get_user_history.rs  message_mysql_history_common.rs  message_mysql_search.rs  message_persistence.rs  message_rdb_chunking.rs  message_rdb_get_group_history.rs  message_rdb_get_user_history.rs  message_rdb_history_common.rs  message_rdb_search.rs  message_restore.rs  object_storage.rs  qq_message_list_mysql_persistence.rs  qq_message_list_rdb_persistence.rs  qq_message_list_weaviate_persistence.rs  registry.rs
zihuan_graph_engine/src/database/: mod.rs  mysql.rs  redis.rs  rustfs.rs  weaviate.rs  weaviate_image_collection.rs
zihuan_graph_engine/src/util/: and_then.rs  any_of.rs  array_get.rs  at_qq_target_message.rs  binary_to_image_content_part.rs  boolean_branch.rs  boolean_not.rs  build_multimodal_user_message.rs  concat_vec.rs  conditional.rs  conditional_router.rs  current_time.rs  format_string.rs  function.rs  function_inputs.rs  function_outputs.rs  graph_inputs.rs  graph_outputs.rs  join_string.rs  json_extract.rs  json_parser.rs  json_to_qq_message_vec.rs  llm_message_content_as_json.rs  llm_message_session_cache.rs  llm_message_session_cache_get.rs  llm_message_session_cache_set.rs  llm_message_to_string.rs  message_content.rs  message_list_data.rs  mod.rs  openai_message_content_as_json.rs  openai_message_session_cache.rs  preview_message_list.rs  (+23 more)
zihuan_llm/: Cargo.toml  build.rs
zihuan_llm/src/: agent_text_similarity.rs  brain_node.rs  brain_tool.rs  context_compact_node.rs  context_compaction.rs  lib.rs  llm_api.rs  llm_api_node.rs  llm_base.rs  llm_infer_node.rs  llm_node.rs  system_config.rs  tool_subgraph.rs  tooling.rs
zihuan_service/: Cargo.toml  build.rs
zihuan_service/src/: lib.rs  python_runtime.rs  qq_chat_user_input.rs  resource_resolver.rs  scheduled_task.rs
zihuan_service/tests/: deep_search_qq_message_workflow_definition.rs  image_understand_tool_definition.rs  python_tool_definition.rs  qq_chat_agent_service_tool_inputs.rs  qq_chat_agent_tool_inputs.rs  qq_chat_tool_inputs.rs  qq_chat_user_input_test.rs
(+814 files in other folders)
