[workspace]
members = ["node_macros", "general_wheel_cpp", "zihuan_core", "zihuan_graph_engine", "zihuan_llm", "ims_bot_adapter", "storage_handler", "zihuan_service", "zihuan_graph_cli"]

[patch.crates-io]
candle-transformers = { path = "third_party/candle-transformers" }

[package]
name = "zihuan_next"
version = "0.1.0"
edition = "2021"
description = "A bot for daily helper and coding helper, support for adapter qq bot, web, edge devices"
authors = ["FredYakumo"]

[features]
default = []
candle-cuda = ["zihuan_llm/candle-cuda"]
candle-metal = ["zihuan_llm/candle-metal"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
log = "0.4"
log_util = { git = "https://github.com/FredYakumo/LogUtil" }
lazy_static = "1.4"
futures-util = "0.3"
http = "1.0"

redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12.25", features = ["blocking", "json"] }
thiserror = "2.0.17"
clap = { version = "4.5", features = ["derive", "env"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
salvo = { version = "0.75", features = ["websocket", "serve-static", "cors", "affix-state"] }
rust-embed = { version = "8", features = ["debug-embed"] }
uuid = { version = "1", features = ["v4"] }
node_macros = { path = "node_macros" }
zihuan_core = { path = "zihuan_core" }
zihuan_graph_engine = { path = "zihuan_graph_engine" }
zihuan_llm = { path = "zihuan_llm" }
ims_bot_adapter = { path = "ims_bot_adapter" }
storage_handler = { path = "storage_handler" }
zihuan_service = { path = "zihuan_service" }

