[package]
name = "ims_bot_adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
zihuan_core = { path = "../zihuan_core" }
zihuan_graph_engine = { path = "../zihuan_graph_engine" }
node_macros = { path = "../node_macros" }
storage_handler = { path = "../storage_handler" }

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
log = "0.4"
futures-util = "0.3"
http = "1.0"
once_cell = "1.20"
reqwest = { version = "0.12.25", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
percent-encoding = "2.3"
base64 = "0.22"

