[package]
name = "storage_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
async-recursion = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.12.25", features = ["json"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
once_cell = "1.20"
uuid = { version = "1", features = ["v4"] }
zihuan_core = { path = "../zihuan_core" }
zihuan_graph_engine = { path = "../zihuan_graph_engine" }
