[package]
name = "zihuan_graph_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
zihuan_core = { path = "../zihuan_core" }
node_macros = { path = "../node_macros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
log = "0.4"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12.25", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
futures-util = "0.3"
lazy_static = "1.4"
aws-config = "1"
aws-sdk-s3 = "1"
aws-credential-types = "1"
aws-types = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
