[package]
name = "zihuan_llm"
version = "0.1.0"
edition = "2021"

[features]
default = []
candle-cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
candle-metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[dependencies]
general_wheel_cpp = { path = "../general_wheel_cpp" }
zihuan_core = { path = "../zihuan_core" }
zihuan_graph_engine = { path = "../zihuan_graph_engine" }
ims_bot_adapter = { path = "../ims_bot_adapter" }
node_macros = { path = "../node_macros" }

candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.25", features = ["blocking", "json"] }
tokenizers = "0.22.2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

