[package]
name = "zihuan_llm"
version = "0.1.0"
edition = "2021"

[features]
default = []
candle-cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
candle-metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[dependencies]
zihuan_core = { path = "../zihuan_core" }
zihuan_agent = { path = "../zihuan_agent" }
zihuan_graph_engine = { path = "../zihuan_graph_engine" }

candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.25", features = ["blocking", "json", "stream"] }
tokenizers = "0.22.2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
