[package]
name = "zihuan_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
salvo = { version = "0.75", features = ["websocket", "affix-state"] }

zihuan_core = { path = "../zihuan_core" }
zihuan_agent = { path = "../zihuan_agent" }
zihuan_graph_engine = { path = "../zihuan_graph_engine" }
model_inference = { path = "../model_inference" }
ims_bot_adapter = { path = "../ims_bot_adapter" }
storage_handler = { path = "../storage_handler" }
general_wheel_cpp = { path = "../general_wheel_cpp" }
base64 = "0.22"
reqwest = { version = "0.12.25", features = ["blocking", "json", "stream"] }

