[package]
name = "zihuan_bot_adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
zihuan_core = { path = "../zihuan_core" }
zihuan_bot_types = { path = "../zihuan_bot_types" }
zihuan_llm_types = { path = "../zihuan_llm_types" }
zihuan_node = { path = "../zihuan_node" }
node_macros = { path = "../../node_macros" }

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
futures-util = "0.3"
http = "1.0"
once_cell = "1.20"
